@@ -4,9 +4,6 @@ Para esta version:
 --Errores
 
 
--Desactivar border hace desaparecer el joystick. Solo en cocoa?
-
-
 -al conmutar de ventana de ZEsarUX, en Mac, a veces se congela la aplicación. por que? tanto pasa con menu abierto como cerrado.
 
 
