@@ -103,6 +103,7 @@ Fixed pause: can now return when pressing mouse button too
 Fixed assembler parsing expressions (NN) and NN is an hexadecimal number
 Fixed debug step over and sending keys to emulated machine
 Fixed setting "set machine snap load" when loading .Z80 version 1 snapshots
+Fixed real joystick menu disabled when switching border
 
 * Misc Changes:
 
